# ffmpeg-studio

./: LICENSE  PORTING_GUIDE.md  README.md
Distribution/: FFmpeg Studio-1.0.0-1.x86_64.rpm  FFmpeg Studio_1.0.0_amd64.deb  PKGBUILD  README.md  ffmpeg-studio-1.0.0-1-x86_64.pkg.tar.zst
Distribution/pkg/ffmpeg-studio/: .BUILDINFO  .MTREE  .PKGINFO
Distribution/pkg/ffmpeg-studio/usr/share/applications/: ffmpeg-studio.desktop
Distribution/src/: ffmpeg-studio
frontend/: index.html  package-lock.json  package.json  tsconfig.json  vite.config.ts
frontend/src/: main.ts  style.css
frontend/src-tauri/: Cargo.toml  tauri.conf.json
frontend/src-tauri/capabilities/: default.json
frontend/src-tauri/src/: main.rs
