[package]
name = "ffmpeg-studio"
version = "1.0.0"
description = "FFmpeg Studio - A desktop interface for FFmpeg operations"
authors = [""]
license = "MIT"
repository = ""
edition = "2021"
rust-version = "1.77.2"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
log = "0.4"
tauri = { version = "2", features = [] }
tauri-plugin-dialog = "2"
tauri-plugin-fs = "2"
tauri-plugin-shell = "2"
tauri-plugin-log = "2"
uuid = { version = "1", features = ["v4"] }
tokio = { version = "1", features = ["full"] }
regex = "1"

[profile.release]
strip = true
lto = true
codegen-units = 1
panic = "abort"
